--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ humantime = "2.1.0"
 sscanf = "0.4.2"
 
 [build-dependencies]
-tinytemplate = "1.2.1"
-serde = { version = "1.0.215", features = ["derive"] }
-serde_json = "1.0.133"
+prettyplease = "0.2.37"
+quote = "1.0.40"
+syn = "2.0.106"
